# colour-palette-gen

./: .gitignore  README.md  pyproject.toml
palette-gen/: __init__.py  utils.py  v2.py
palette-gen/utils/: __init__.py
palette-gen/v2/: gen.py
palettegen/: __init__.py  utils.py  v2.py
v2/: gen.py
