[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "palette-gen"
version = "0.0.1"
authors = [
    { name="Theo Molteno", email="theo@molteno.net" },
]
description = "A package to extract colour palettes, and generate thumbnails from images"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/moltenot/colour-palette-gen"
"Bug Tracker" = "https://github.com/moltenot/colour-palette-gen/issues"
