[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "palettegen"
authors = [{name = "Theo Molteno", email = "theo@molteno.net"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["svgwrite", "scikit-image", "scikit-learn"]

[project.urls]
Home = "https://github.com/moltenot/colour-palette-gen"
